--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap');
         body {
             font-family: 'Inter', sans-serif;
-            background-color: #f3f4f6;
+            background-color: #f3f4e6;
             color: #1f2937;
         }
         .tab-content { display: none; }
@@ -496,6 +496,7 @@
                 // Adicionado: Verificação se o documento existe
                 if (!produtoDoc.exists()) {
                     showAviso("Produto não encontrado. Ele pode ter sido removido.");
+                    console.error("Erro: Produto com ID " + produtoId + " não encontrado no banco de dados.");
                     return;
                 }
                 
@@ -803,7 +804,7 @@
             ordemProducaoAtual.tempoLiquidoFormatado = formatarTempo(totalTempoLiquidoOrdem);
             
             const tempoLiquidoEmHoras = ordemProducaoAtual.tempoLiquidoMs / (1000 * 60 * 60);
-            ordemProducaoAtual.produtividade = tempoLiquidoEm Horas > 0 ? ordemProducaoAtual.quantidade / tempoLiquidoEmHoras : 0;
+            ordemProducaoAtual.produtividade = tempoLiquidoEmHoras > 0 ? ordemProducaoAtual.quantidade / tempoLiquidoEmHoras : 0;
             ordemProducaoAtual.concluida = true;
 
             try {
