--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         .tab-content { display: none; }
         .tab-content.active { display: block; }
         .tab-button {
-            @apply flex-1 py-2 px-4 text-center cursor-pointer font-semibold rounded-t-lg transition-colors;
+            @apply flex-1 py-2 px-4 text-center cursor-pointer font-semibold transition-colors;
         }
         .tab-button.active {
-            @apply bg-white text-indigo-600 border-b-2 border-indigo-600;
+            @apply bg-indigo-600 text-white rounded-t-lg;
         }
         .tab-button:not(.active) {
-            @apply text-gray-600 hover:text-gray-900;
+            @apply bg-gray-200 text-gray-700 hover:bg-gray-300 rounded-t-lg;
         }
         .product-item {
             @apply p-2 bg-gray-100 rounded border border-gray-200 cursor-pointer hover:bg-gray-200 transition-colors;
@@ -50,7 +50,7 @@
         </div>
 
         <!-- Abas de Navegação -->
-        <div class="flex border-b border-gray-200 mb-6">
+        <div class="flex space-x-2 mb-6">
             <div id="cadastroTabBtn" class="tab-button active">Cadastro de Produtos</div>
             <div id="apontamentoTabBtn" class="tab-button">Apontamento de Ordem</div>
             <div id="historicoTabBtn" class="tab-button">Histórico de Ordens</div>
@@ -120,7 +120,7 @@
                     <ul id="ordensEmAndamentoUl" class="list-none space-y-2"></ul>
                 </div>
                 <div>
-                    <h3 class="text-xl font-semibold text-gray-700">Ordens Concluidas</h3>
+                    <h3 class="text-xl font-semibold text-gray-700">Ordens Concluídas</h3>
                     <ul id="ordensConcluidasUl" class="list-none space-y-2"></ul>
                 </div>
             </div>
@@ -139,7 +139,7 @@
         </div>
         
         <!-- Modal para preencher responsável -->
-        <div id="responsavelModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity50 flex items-center justify-center">
+        <div id="responsavelModal" class="hidden fixed inset-0 bg-gray-600 bg-opacity-50 flex items-center justify-center">
             <div class="bg-white p-6 rounded-lg shadow-xl w-full max-w-md border border-gray-200">
                 <h3 class="text-lg font-bold mb-4">Responsável pela Etapa</h3>
                 <input type="text" id="responsavelInput" class="block w-full rounded-md border-gray-300 shadow-sm p-2" placeholder="Nome do operador">
@@ -652,4 +652,3 @@
     </script>
 </body>
 </html>
-
